# EmotionQuant_alpha

./: .env.example  .gitignore  .gitkeep  AGENTS.en.md  AGENTS.md  CLAUDE.en.md  CLAUDE.md  EmotionQuant_beta.code-workspace  README.en.md  README.md  WARP.en.md  WARP.md  _tmp_audit.py  _tmp_gap_audit.py  check_duckdb_status.ps1  check_lock.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  test_data_source_fallback.py  test_tushare_token.py
.claude/: INTEGRATION.md  README.md
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: quality-gates.yml
.reports/: EmotionQuant-critique-R10-warp-20260211.md  EmotionQuant-critique-R11-warp-20260211.md  EmotionQuant-critique-R12-warp-20260211.md  EmotionQuant-critique-R2-warp-20260211.md  EmotionQuant-critique-R4-warp-20260211.md  EmotionQuant-critique-R7-warp-20260211.md  EmotionQuant-critique-R9-warp-20260211.md  EmotionQuant-link-audit-20260212.md  PROGRESS-AUDIT-20260222.md  crisis-diagnosis-20260223.md  s0-s2-production-audit-20260221.md
.reports/design-review-sandbox/: repair-log-20260214.md
Governance/Capability/: CP-01-data-layer.md  CP-02-mss.md  CP-03-irs.md  CP-04-pas.md  CP-05-integration.md  CP-06-backtest.md  CP-07-trading.md  CP-08-gui.md  CP-09-analysis.md  CP-10-validation.md  README.md  SPIRAL-CP-OVERVIEW.md  SPIRAL-TASK-TEMPLATE.md
Governance/SpiralRoadmap/: DEPENDENCY-MAP.md  EXECUTION-CARDS-INDEX.md  README.md  ROADMAP-DESIGN-COVERAGE-ANALYSIS.md  S0A-EXECUTION-CARD.md  S0B-EXECUTION-CARD.md  S0C-EXECUTION-CARD.md  S1A-EXECUTION-CARD.md  S1B-EXECUTION-CARD.md  S2A-EXECUTION-CARD.md  S2B-EXECUTION-CARD.md  S2C-EXECUTION-CARD.md  S2R-EXECUTION-CARD.md  S3-EXECUTION-CARD.md  S3A-EXECUTION-CARD.md  S3AR-EXECUTION-CARD.md  S3AR-S3B-EXECUTABLE-TASKLIST.md  S3B-EXECUTION-CARD.md  S3C-EXECUTION-CARD.md  S3D-EXECUTION-CARD.md  S3E-EXECUTION-CARD.md  S3R-EXECUTION-CARD.md  S4-EXECUTION-CARD.md  S4B-EXECUTION-CARD.md  S4BR-EXECUTION-CARD.md  S4R-EXECUTION-CARD.md  S5-EXECUTION-CARD.md  S5R-EXECUTION-CARD.md  S6-EXECUTION-CARD.md  S6R-EXECUTION-CARD.md  S7A-EXECUTION-CARD.md  S7AR-EXECUTION-CARD.md  SPIRAL-PRODUCTION-ROUTES.md  SPIRAL-S0-S2-EXECUTABLE-ROADMAP.md  SPIRAL-S3A-S4B-EXECUTABLE-ROADMAP.md  SPIRAL-S5-S7A-EXECUTABLE-ROADMAP.md  SPIRAL-STAGE-TEMPLATES.md  VORTEX-EVOLUTION-ROADMAP.md
Governance/record/: ARCH-DECISION-001-pipeline-vs-oop.md  code-progress-audit-20260223.md  debt-closeout-20260227-s0a-s2c.md  debts.md  development-status.md  reusable-assets.md  s3-s3e-fullchain-reconciliation-20260222.md  todolists.md
Governance/steering/: 6A-WORKFLOW.md  TRD.md  系统铁律.md  (+5 more)
docs/: module-index.md  naming-contracts-glossary.md  naming-contracts.schema.json  naming-conventions.md  roadmap.md  sos.7z  system-overview.md  technical-baseline.md
scripts/: batch_generate_l2l3.py  export_duckdb_to_parquet.py
(+611 files in other folders)
